--- a/Service/src/Dt.Fsm/Dt.Fsm.csproj
+++ b/Service/src/Dt.Fsm/Dt.Fsm.csproj
@@ -17,6 +17,9 @@
     <None Update="drive\photo\1.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="drive\photo\banner.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="drive\photo\Logon.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
