--- a/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
+++ b/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
@@ -75,9 +75,7 @@
     <BundleResource Include="Assets\SplashScreen%402x.png" />
     <BundleResource Include="Assets\SplashScreen%403x.png" />
     <BundleResource Include="Assets\logo.png" />
-    <Content Include="..\Common\iOS说明.txt">
-      <Link>iOS说明.txt</Link>
-    </Content>
+    <None Include="iOS说明.txt" />
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
@@ -105,9 +103,6 @@
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Icon-1024.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <InterfaceDefinition Include="..\Common\LaunchScreen.storyboard">
-      <Link>LaunchScreen.storyboard</Link>
-    </InterfaceDefinition>
     <Content Include="Entitlements.plist" />
     <BundleResource Include="..\Common\Fonts\icon.ttf">
       <Link>Assets\Fonts\icon.ttf</Link>
@@ -118,10 +113,12 @@
     <None Include="Info.plist">
       <SubType>Designer</SubType>
     </None>
-    <Compile Include="..\Common\Main.cs">
-      <Link>Main.cs</Link>
+    <Compile Include="..\Common\Stub.cs">
+      <Link>Stub.cs</Link>
     </Compile>
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <InterfaceDefinition Include="LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -131,6 +128,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI" Version="2.4.0" />
+    <PackageReference Include="Dt.Cells" Version="1.0.0" />
+    <PackageReference Include="Dt.Cells.Data" Version="1.0.0" />
+    <PackageReference Include="Dt.Charts" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="..\Common\App.xaml">
@@ -147,18 +147,6 @@
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj">
       <Project>{13a270fb-825a-4fb3-ae13-01dfd7c7a147}</Project>
       <Name>Dt.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
-      <Project>{7ce3ed41-685e-46bd-ab2f-ab25467cbe35}</Project>
-      <Name>Dt.Cells.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj">
-      <Project>{97eac2fe-30d6-40d8-9fec-a568774d1058}</Project>
-      <Name>Dt.Cells</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj">
-      <Project>{a77e5063-ff97-49f3-aa5e-814baa7a929d}</Project>
-      <Name>Dt.Charts</Name>
     </ProjectReference>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj">
       <Project>{89b073f7-81dd-4e5d-a093-f73121b1f406}</Project>
