--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Service/src/Dt.Cm/etc/log/
 Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
+Client/Common/wasm/
 
 # User-specific files
 *.rsuser
