--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -54,6 +54,14 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+    <Compile Include="..\Common\App.xaml.cs" Link="App.xaml.cs" />
+	  <Page Include="..\Common\App.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	    <Link>App.xaml</Link>
+	  </Page>
+	</ItemGroup>
+	
+	<ItemGroup>
 	  <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
 	  <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
 	  <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
