--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -11,8 +11,27 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Themes\Styles\Desk - 复制.xaml" />
+    <None Remove="Themes\Styles\StylePhone - 复制.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Themes\Styles\Desk - 复制.xaml" />
+    <UpToDateCheckInput Remove="Themes\Styles\StylePhone - 复制.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
     <PackageReference Include="Dt.Charts" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Themes\Styles\Desk - 复制.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Themes\Styles\StylePhone - 复制.xaml">
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
 </Project>
