所有能够反射出类型的dll都需要LinkerConfig.xml中link

--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -41,6 +41,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <!-- 能够反射出类型的dll都需要link -->
     <LinkerDescriptor Include="LinkerConfig.xml" />
   </ItemGroup>
 	
