--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -4,8 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
     <!-- 两种模式的sdk，必须完整路径 -->
-    <MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-610.zip</MonoWasmSDKUri>
-    <MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-610-aot.zip</MonoWasmAOTSDKUri>
+    <MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-5235.zip</MonoWasmSDKUri>
+    <MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-5235-aot.zip</MonoWasmAOTSDKUri>
     <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
@@ -49,9 +49,9 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-		<PackageReference Include="Uno.UI" Version="2.4.0" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0-dev.44" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0-dev.44" PrivateAssets="all" />
+		<PackageReference Include="Uno.UI" Version="2.4.4" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" PrivateAssets="all" />
 	</ItemGroup>
 	
 	<ItemGroup>
