--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -4,8 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
     <!-- 两种模式的sdk，必须完整路径 -->
-    <MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-5235.zip</MonoWasmSDKUri>
-    <MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-5235-aot.zip</MonoWasmAOTSDKUri>
+    <MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-610.zip</MonoWasmSDKUri>
+    <MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-610-aot.zip</MonoWasmAOTSDKUri>
     <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
@@ -16,58 +16,47 @@
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)'!='net46'">
-		<None Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-
-		<!-- remove files included by msbuild extras -->
-		<Page Remove="@(Page)" />
-		<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Include="WasmCSS\**\*.css" />
-		<EmbeddedResource Include="WasmScripts\**\*.js" />
-
-		<UpToDateCheckInput Include="ts\**\*" />
-		<UpToDateCheckInput Include="WasmCSS\**\*" />
-		<UpToDateCheckInput Include="WasmScripts\**\*" />
-		
-		<Content Include="Fonts\*.woff2" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <Content Include="Assets\SplashScreen.png" />
+    <Content Include="Fonts\icon.woff2" />
+    <Content Include="Fonts\winjs-symbols.woff2" />
+    <EmbeddedResource Include="WasmCSS\Fonts.css" />
+    <EmbeddedResource Include="WasmScripts\AppManifest.js" />
+  </ItemGroup>
+  
   <ItemGroup>
     <!-- 能够反射出类型的dll都需要link -->
     <LinkerDescriptor Include="LinkerConfig.xml" />
   </ItemGroup>
-	
-	<ItemGroup>
+
+  <ItemGroup>
+    <None Include="Program.cs" />
+    <None Include="LinkerConfig.xml" />
+    <None Include="wwwroot\web.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
 		<PackageReference Include="Uno.UI" Version="2.4.4" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" PrivateAssets="all" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" />
 	</ItemGroup>
-	
-	<ItemGroup>
+  
+  <ItemGroup>
     <Compile Include="..\Common\App.xaml.cs" Link="App.xaml.cs" />
-	  <Page Include="..\Common\App.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	    <Link>App.xaml</Link>
-	  </Page>
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
-	  <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
-	  <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-	  <ProjectReference Include="..\Dt.Sample\Dt.Sample.csproj" />
-	  <ProjectReference Include="..\Fz\Dt.Fz.csproj" />
-	</ItemGroup>
+    <Page Include="..\Common\App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <Link>App.xaml</Link>
+    </Page>
+  </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
+    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
+    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+    <ProjectReference Include="..\Dt.Sample\Dt.Sample.csproj" />
+    <ProjectReference Include="..\Fz\Dt.Fz.csproj" />
+  </ItemGroup>
 </Project>
