--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -9,9 +9,13 @@
     <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
+    <!-- 默认Interpreter -->
     <!--<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>-->
     <!--<WasmShellMonoRuntimeExecutionMode>FullAOT</WasmShellMonoRuntimeExecutionMode>-->
+    <!-- 生成InterpreterAndAOT模式的AOT配置文件 -->
     <!--<WasmShellGenerateAOTProfile>true</WasmShellGenerateAOTProfile>-->
+    <!-- 默认true，不链接dotnet.wasm文件变大 -->
+    <!--<WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>-->
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
@@ -28,9 +32,9 @@
 
   <ItemGroup>
     <!-- InterpreterAndAOT模式时不AOT的dll -->
-    <MonoRuntimeMixedModeExcludedAssembly Include="Dt.Core" />
+    <!--<MonoRuntimeMixedModeExcludedAssembly Include="Dt.Core" />-->
   </ItemGroup>
-  
+
   <ItemGroup>
     <!-- 能够反射出类型的dll都需要link -->
     <LinkerDescriptor Include="LinkerConfig.xml" />
@@ -46,11 +50,11 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-		<PackageReference Include="Uno.UI" Version="2.4.4" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" />
-	</ItemGroup>
-  
+    <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <Compile Include="..\Common\App.xaml.cs" Link="App.xaml.cs" />
     <Page Include="..\Common\App.xaml">
