--- a/Client/Dt.Charts/Dt.Charts.csproj
+++ b/Client/Dt.Charts/Dt.Charts.csproj
@@ -4,6 +4,10 @@
     <Description>DT平台图表控件库</Description>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="PlotElement\" />
+  </ItemGroup>
+
   <Import Project="..\Common\Dtc-Stable.props" />
   
 </Project>
