--- a/Client/Common/Dtc-Stable.props
+++ b/Client/Common/Dtc-Stable.props
@@ -1,6 +1,6 @@
 <Project ToolsVersion="Current">
   <PropertyGroup>
-    <TargetFrameworks>uap10.0.18362;monoandroid10.0</TargetFrameworks>
+    <TargetFrameworks>uap10.0.18362;monoandroid10.0;xamarinios10;netstandard2.0</TargetFrameworks>
     <Authors>hdt</Authors>
     <Product>DT业务基础平台</Product>
     <Copyright>Copyright © 2020</Copyright>
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' or '$(TargetFramework)'=='netstandard2.0' ">
-    <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1002" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' ">
