--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -51,8 +51,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.0-dev.1002" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.14" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.14" />
   </ItemGroup>
 
   <ItemGroup>
