--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -87,7 +87,7 @@
     <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1002" />
+    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1294" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +98,14 @@
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj">
       <Project>{e3f3c994-17dc-4b65-8a66-f2c70537df7d}</Project>
       <Name>Dt.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
+      <Project>{2b8fda51-98e6-4968-87ec-f878058fdfd4}</Project>
+      <Name>Dt.Cells.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj">
+      <Project>{191d199e-f280-4f36-a929-2b17218cacc0}</Project>
+      <Name>Dt.Cells</Name>
     </ProjectReference>
     <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj">
       <Project>{138be732-7f56-4b27-83a3-cfde63b7e7b0}</Project>
