Excel规范可视树元素名称

--- a/Client/Dt.Cells/Dt.Cells.csproj
+++ b/Client/Dt.Cells/Dt.Cells.csproj
@@ -7,6 +7,10 @@
   <Import Project="..\Common\Dtc-Stable.props" />
 
   <ItemGroup>
+    <Compile Remove="Row\HeaderCornerRowPresenter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Icons\Ascend.png" />
     <Content Include="Icons\AutoFillIndicator.png" />
     <Content Include="Icons\BottomCenterGrip.png" />
