--- a/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
+++ b/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
@@ -127,7 +127,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1515" />
+    <PackageReference Include="Uno.UI" Version="3.0.12" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="..\Common\App.xaml">
