--- a/Client/Dt.Cells/Dt.Cells.csproj
+++ b/Client/Dt.Cells/Dt.Cells.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <Description>DT平台Excel控件</Description>
+    <!--将引用的项目合并打包-->
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
 
   <Import Project="..\Common\Dtc-Stable.props" />
@@ -108,4 +110,11 @@
     <ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj" />
   </ItemGroup>
 
+  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
+    <ItemGroup>
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+      <!--uwp包含引用项目的xbf文件-->
+      <TfmSpecificPackageFile Include="@(_LayoutFile)" PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)" Condition="'$(TargetFramework)' == 'uap10.0.18362'" />
+    </ItemGroup>
+  </Target>
 </Project>
