打包Dt.Cells，集成6个stable项目

--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -35,15 +35,14 @@
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-    
-    <!--<PackageReference Include="Dt.Charts" Version="1.0.0" />-->
-    <!--<PackageReference Include="Dt.Cells" Version="1.0.0" />-->
-    <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj" />
-    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" />
+    <PackageReference Include="Dt.Cells" Version="2.0.0" />
+    <!--修改Excel或Chart时引用项目-->
+    <!--<ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj" />
+    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" />-->
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' or '$(TargetFramework)'=='netstandard2.0' ">
-    <PackageReference Include="Uno.UI" Version="3.0.12" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-dev.288" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' ">
