--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
 Client/Common/wasm/
+Client/Common/nupkg/
 
 # User-specific files
 *.rsuser
