--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -87,7 +87,8 @@
     <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.0.12" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-dev.288" /> 
+    <PackageReference Include="Dt.Cells" Version="2.0.0" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
@@ -98,18 +99,6 @@
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj">
       <Project>{e3f3c994-17dc-4b65-8a66-f2c70537df7d}</Project>
       <Name>Dt.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
-      <Project>{2b8fda51-98e6-4968-87ec-f878058fdfd4}</Project>
-      <Name>Dt.Cells.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj">
-      <Project>{191d199e-f280-4f36-a929-2b17218cacc0}</Project>
-      <Name>Dt.Cells</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj">
-      <Project>{138be732-7f56-4b27-83a3-cfde63b7e7b0}</Project>
-      <Name>Dt.Charts</Name>
     </ProjectReference>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj">
       <Project>{7e933aca-685d-4a54-979c-ce83c5cfd2fc}</Project>
@@ -123,6 +112,19 @@
       <Project>{e9c48931-cc12-4f49-8fbb-ebefc628dfc6}</Project>
       <Name>Dt.Fz</Name>
     </ProjectReference>
+    <!--修改Excel或Chart时引用项目-->
+    <!--<ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
+      <Project>{2b8fda51-98e6-4968-87ec-f878058fdfd4}</Project>
+      <Name>Dt.Cells.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj">
+      <Project>{191d199e-f280-4f36-a929-2b17218cacc0}</Project>
+      <Name>Dt.Cells</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dt.Charts\Dt.Charts.csproj">
+      <Project>{138be732-7f56-4b27-83a3-cfde63b7e7b0}</Project>
+      <Name>Dt.Charts</Name>
+    </ProjectReference>-->    
   </ItemGroup>
   <ItemGroup>
     <Page Include="..\Common\App.xaml">
