Excel中的图片修改为嵌入资源

--- a/Client/Dt.Cells/Dt.Cells.csproj
+++ b/Client/Dt.Cells/Dt.Cells.csproj
@@ -9,95 +9,92 @@
   <Import Project="..\Common\Dtc-Stable.props" />
 
   <ItemGroup>
-    <Content Include="Icons\Ascend.png" />
-    <Content Include="Icons\AutoFillIndicator.png" />
-    <Content Include="Icons\BottomCenterGrip.png" />
-    <Content Include="Icons\BottomLeftGrip.png" />
-    <Content Include="Icons\BottomRightGrip.png" />
-    <Content Include="Icons\ConditionalFormats\Arrow45GrayDown.png" />
-    <Content Include="Icons\ConditionalFormats\Arrow45GrayUp.png" />
-    <Content Include="Icons\ConditionalFormats\Arrow45YellowDown.png" />
-    <Content Include="Icons\ConditionalFormats\Arrow45YellowUp.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowBlueUp.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowGrayDown.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowGrayRight.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowGrayUp.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowRedDown.png" />
-    <Content Include="Icons\ConditionalFormats\ArrowYellowRight.png" />
-    <Content Include="Icons\ConditionalFormats\BlackCircle.png" />
-    <Content Include="Icons\ConditionalFormats\BlackFillCircles.png" />
-    <Content Include="Icons\ConditionalFormats\Box0.png" />
-    <Content Include="Icons\ConditionalFormats\Box1.png" />
-    <Content Include="Icons\ConditionalFormats\Box2.png" />
-    <Content Include="Icons\ConditionalFormats\Box3.png" />
-    <Content Include="Icons\ConditionalFormats\Box4.png" />
-    <Content Include="Icons\ConditionalFormats\GrayFillCicle.png" />
-    <Content Include="Icons\ConditionalFormats\GreenCheck.png" />
-    <Content Include="Icons\ConditionalFormats\GreenCheckSymbol.png" />
-    <Content Include="Icons\ConditionalFormats\GreenCircle.png" />
-    <Content Include="Icons\ConditionalFormats\GreenFlag.png" />
-    <Content Include="Icons\ConditionalFormats\GreenTraficLight.png" />
-    <Content Include="Icons\ConditionalFormats\PinkFillCircle.png" />
-    <Content Include="Icons\ConditionalFormats\Quarter0.png" />
-    <Content Include="Icons\ConditionalFormats\Quarter1.png" />
-    <Content Include="Icons\ConditionalFormats\Quarter2.png" />
-    <Content Include="Icons\ConditionalFormats\Quarter3.png" />
-    <Content Include="Icons\ConditionalFormats\Quarter4.png" />
-    <Content Include="Icons\ConditionalFormats\Rating0.png" />
-    <Content Include="Icons\ConditionalFormats\Rating1.png" />
-    <Content Include="Icons\ConditionalFormats\Rating2.png" />
-    <Content Include="Icons\ConditionalFormats\Rating3.png" />
-    <Content Include="Icons\ConditionalFormats\Rating4.png" />
-    <Content Include="Icons\ConditionalFormats\RedCircle.png" />
-    <Content Include="Icons\ConditionalFormats\RedCross.png" />
-    <Content Include="Icons\ConditionalFormats\RedCrossSymbol.png" />
-    <Content Include="Icons\ConditionalFormats\RedDiamond.png" />
-    <Content Include="Icons\ConditionalFormats\RedFillCircle.png" />
-    <Content Include="Icons\ConditionalFormats\RedFlag.png" />
-    <Content Include="Icons\ConditionalFormats\RedTraficLight.png" />
-    <Content Include="Icons\ConditionalFormats\Star0.png" />
-    <Content Include="Icons\ConditionalFormats\Star1.png" />
-    <Content Include="Icons\ConditionalFormats\Star2.png" />
-    <Content Include="Icons\ConditionalFormats\TriangleGreenUp.png" />
-    <Content Include="Icons\ConditionalFormats\TriangleRedDown.png" />
-    <Content Include="Icons\ConditionalFormats\TriangleYellow.png" />
-    <Content Include="Icons\ConditionalFormats\YellowCircle.png" />
-    <Content Include="Icons\ConditionalFormats\YellowExclamation.png" />
-    <Content Include="Icons\ConditionalFormats\YellowExclamationSymbol.png" />
-    <Content Include="Icons\ConditionalFormats\YellowFlag.png" />
-    <Content Include="Icons\ConditionalFormats\YellowTraficLight.png" />
-    <Content Include="Icons\ConditionalFormats\YellowTrangle.png" />
-    <Content Include="Icons\Descend.png" />
-    <Content Include="Icons\DragCell_CtrlDragCursor.png" />
-    <Content Include="Icons\DragCell_DragCursor.png" />
-    <Content Include="Icons\DragFill_CtrlDragCursor.png" />
-    <Content Include="Icons\DragFill_DragCursor.png" />
-    <Content Include="Icons\Filter.png" />
-    <Content Include="Icons\FilterAscend.png" />
-    <Content Include="Icons\FilterDescend.png" />
-    <Content Include="Icons\MiddleLeftGrip.png" />
-    <Content Include="Icons\MiddleRightGrip.png" />
-    <Content Include="Icons\NoSortFilter.png" />
-    <Content Include="Icons\ResizeGripperHor.png" />
-    <Content Include="Icons\ResizeGripperHor_dark.png" />
-    <Content Include="Icons\ResizeGripperVer.png" />
-    <Content Include="Icons\ResizeGripperVer_dark.png" />
-    <Content Include="Icons\Resize_HorizontalCursor.png" />
-    <Content Include="Icons\Resize_HorizontalCursor_dark.png" />
-    <Content Include="Icons\Resize_HorizontalSplitCursor.png" />
-    <Content Include="Icons\Resize_HorizontalSplitCursor_dark.png" />
-    <Content Include="Icons\Resize_VerticalCursor.png" />
-    <Content Include="Icons\Resize_VerticalCursor_dark.png" />
-    <Content Include="Icons\Resize_VerticalSplitCursor.png" />
-    <Content Include="Icons\Resize_VerticalSplitCursor_dark.png" />
-    <Content Include="Icons\SortAscending.png" />
-    <Content Include="Icons\SortDescending.png" />
-    <Content Include="Icons\TopCenterGrip.png" />
-    <Content Include="Icons\TopLeftGrip.png" />
-    <Content Include="Icons\TopRightGrip.png" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <EmbeddedResource Include="Icons\Ascend.png" />
+    <EmbeddedResource Include="Icons\AutoFillIndicator.png" />
+    <EmbeddedResource Include="Icons\BottomCenterGrip.png" />
+    <EmbeddedResource Include="Icons\BottomLeftGrip.png" />
+    <EmbeddedResource Include="Icons\BottomRightGrip.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Arrow45GrayDown.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Arrow45GrayUp.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Arrow45YellowDown.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Arrow45YellowUp.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowBlueUp.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowGrayDown.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowGrayRight.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowGrayUp.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowRedDown.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\ArrowYellowRight.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\BlackCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\BlackFillCircles.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Box0.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Box1.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Box2.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Box3.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Box4.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GrayFillCicle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GreenCheck.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GreenCheckSymbol.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GreenCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GreenFlag.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\GreenTraficLight.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\PinkFillCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Quarter0.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Quarter1.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Quarter2.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Quarter3.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Quarter4.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Rating0.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Rating1.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Rating2.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Rating3.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Rating4.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedCross.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedCrossSymbol.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedDiamond.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedFillCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedFlag.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\RedTraficLight.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Star0.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Star1.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\Star2.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\TriangleGreenUp.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\TriangleRedDown.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\TriangleYellow.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowCircle.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowExclamation.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowExclamationSymbol.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowFlag.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowTraficLight.png" />
+    <EmbeddedResource Include="Icons\ConditionalFormats\YellowTrangle.png" />
+    <EmbeddedResource Include="Icons\Descend.png" />
+    <EmbeddedResource Include="Icons\DragCell_CtrlDragCursor.png" />
+    <EmbeddedResource Include="Icons\DragCell_DragCursor.png" />
+    <EmbeddedResource Include="Icons\DragFill_CtrlDragCursor.png" />
+    <EmbeddedResource Include="Icons\DragFill_DragCursor.png" />
+    <EmbeddedResource Include="Icons\Filter.png" />
+    <EmbeddedResource Include="Icons\FilterAscend.png" />
+    <EmbeddedResource Include="Icons\FilterDescend.png" />
+    <EmbeddedResource Include="Icons\MiddleLeftGrip.png" />
+    <EmbeddedResource Include="Icons\MiddleRightGrip.png" />
+    <EmbeddedResource Include="Icons\NoSortFilter.png" />
+    <EmbeddedResource Include="Icons\ResizeGripperHor.png" />
+    <EmbeddedResource Include="Icons\ResizeGripperHor_dark.png" />
+    <EmbeddedResource Include="Icons\ResizeGripperVer.png" />
+    <EmbeddedResource Include="Icons\ResizeGripperVer_dark.png" />
+    <EmbeddedResource Include="Icons\Resize_HorizontalCursor.png" />
+    <EmbeddedResource Include="Icons\Resize_HorizontalCursor_dark.png" />
+    <EmbeddedResource Include="Icons\Resize_HorizontalSplitCursor.png" />
+    <EmbeddedResource Include="Icons\Resize_HorizontalSplitCursor_dark.png" />
+    <EmbeddedResource Include="Icons\Resize_VerticalCursor.png" />
+    <EmbeddedResource Include="Icons\Resize_VerticalCursor_dark.png" />
+    <EmbeddedResource Include="Icons\Resize_VerticalSplitCursor.png" />
+    <EmbeddedResource Include="Icons\Resize_VerticalSplitCursor_dark.png" />
+    <EmbeddedResource Include="Icons\SortAscending.png" />
+    <EmbeddedResource Include="Icons\SortDescending.png" />
+    <EmbeddedResource Include="Icons\TopCenterGrip.png" />
+    <EmbeddedResource Include="Icons\TopLeftGrip.png" />
+    <EmbeddedResource Include="Icons\TopRightGrip.png" />
     <EmbeddedResource Include="Res\FunctionInformation.xml" />
     <EmbeddedResource Include="Res\FunctionInformation.zh_CN.xml" />
   </ItemGroup>
