修改Excel中Chart无图例Legend的bug

--- a/Client/Dt.Sample/Dt.Sample.csproj
+++ b/Client/Dt.Sample/Dt.Sample.csproj
@@ -7,9 +7,15 @@
   <Import Project="..\Common\dtc.props" />
 
   <ItemGroup>
+    <None Remove="Report\数据源\图表表格.json" />
+    <None Remove="Report\模板\图表表格.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="Report\数据源\个人成绩.json" />
     <EmbeddedResource Include="Report\数据源\个人成绩_矩阵标题.json" />
-    <EmbeddedResource Include="Report\数据源\图表数据.json" />
+    <EmbeddedResource Include="Report\数据源\图表表格.json" />
+    <EmbeddedResource Include="Report\数据源\图表矩阵.json" />
     <EmbeddedResource Include="Report\数据源\成绩汇总.json" />
     <EmbeddedResource Include="Report\数据源\甘特图.json" />
     <EmbeddedResource Include="Report\数据源\网损情况.json" />
@@ -17,12 +23,13 @@
     <EmbeddedResource Include="Report\数据源\通讯录.json" />
     <EmbeddedResource Include="Report\模板\两层矩阵.xml" />
     <EmbeddedResource Include="Report\模板\分组表格.xml" />
+    <EmbeddedResource Include="Report\模板\图表表格.xml" />
     <EmbeddedResource Include="Report\模板\自动行数列表.xml" />
     <EmbeddedResource Include="Report\模板\含头尾表格.xml" />
     <EmbeddedResource Include="Report\模板\含小计矩阵.xml" />
     <EmbeddedResource Include="Report\模板\含标题矩阵.xml" />
     <EmbeddedResource Include="Report\模板\固定行数列表.xml" />
-    <EmbeddedResource Include="Report\模板\图表.xml" />
+    <EmbeddedResource Include="Report\模板\图表矩阵.xml" />
     <EmbeddedResource Include="Report\模板\最少行表格.xml" />
     <EmbeddedResource Include="Report\模板\脚本.xml" />
     <EmbeddedResource Include="Report\模板\完整矩阵.xml" />
